--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -1371,6 +1371,42 @@ public:
     }
 };
 ```
+### 124. 二叉树中的最大路径和 [Hard]
+
+> 路径 被定义为一条从树中任意节点出发，沿父节点-子节点连接，达到任意节点的序列。同一个节点在一条路径序列中 至多出现一次 。该路径 至少包含一个 节点，且不一定经过根节点。
+
+> 路径和 是路径中各节点值的总和。 给你一个二叉树的根节点 root ，返回其 最大路径和
+
+- 考虑**递归逻辑**，对于节点root的子树，当前最大路径为和 root值加两侧子树的最大路径， 
+  - 而当前树的最大路径，需要考虑是左节点还是右节点构成的
+
+- 因此，整体采用**自底而上的逻辑**，即后序遍历，从叶子节点向上推算最大路径和
+- **并在每次计算路径和时动态判断是否为最大值**
+```
+class Solution {
+public:
+    int ans = INT_MIN;
+    int maxPath(TreeNode* root) {
+        if (!root) {
+            return 0;
+        }
+        // 后序遍历
+        int l = max(maxPath(root -> left), 0);
+        int r = max(maxPath(root -> right), 0);
+        int c = root -> val + l + r;
+        ans = max(ans, c);
+        // 返回的是当前root节点和左/右子路径的最大值 
+        // 因为题目限制路径是 从子节点 -> 父节点 -> 子节点的逻辑
+        return max(l, r) + root -> val;
+    }
+    int maxPathSum(TreeNode* root) {
+        maxPath(root);
+        return ans;
+    }
+};
+```
+
+
 ## 面试
 - 二叉树的序列化和反序列化
 - 子结构
