--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -12,6 +12,7 @@
 - [21. 合并两个有序链表](#21-合并两个有序链表)
 - [234. 回文链表判断](#234-回文链表判断)
 - [141. 环形链表操作](#141-环形链表操作)
+- [142. 环形链表2 [Medium]](#142-环形链表2-medium)
 - [328. 奇偶数组  [Medium]](#328-奇偶数组-medium)
 - [160. 相交链表](#160-相交链表)
 - [146. LRU cache结构设计 [Medium]](#146-lru-cache结构设计-medium)
@@ -503,6 +504,52 @@ public:
            }
        }
         return false;
+    }
+};
+```
+
+### 142. 环形链表2 [Medium]
+
+- 判断有环的进阶版题目
+	- 在找到有环后，移动slow指针，从头重新移动，调整快慢指针速度，都设为1
+    - 当两者再次相遇时即为环的入口
+    - fast - slow = k 即环长度的整数倍
+    - 当前fast到入口的距离为m, 那么head到入口为k-m, 
+    	- fast向前移动k-m到达入口(m + k -m) 
+        - head从头移动k-m也到达入口
+```
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode *detectCycle(ListNode *head) {
+        ListNode* slow = head;
+        ListNode* fast = head;
+        if (!head)
+            return nullptr;
+        bool flag = false;
+        while(fast && fast -> next) {
+            slow = slow -> next;
+            fast = fast -> next -> next;
+            if (slow == fast) {   
+                flag = true;                 
+                break;
+            }
+        }
+        if (!flag)
+            return nullptr;
+        slow = head;
+        while (slow != fast) {
+            slow = slow -> next;
+            fast = fast -> next;
+        }
+        return slow;
     }
 };
 ```
