--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -16,6 +16,7 @@
 - [3. 无重复字符的最长子串 [Medium] [Tencent]](#3-无重复字符的最长子串-medium-tencent)
 - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
 - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
+- [143. 重排链表](#143-重排链表)
 
 <!-- /code_chunk_output -->
 
@@ -495,6 +496,7 @@ public:
 ### 5. 最长回文子串 [Medium] [ByteDance]
 - 基础做法： 双指针中心展开方法进行回文子串搜索
   - 搜索回文子串时考虑是奇数还是偶数串
+  - **特殊情况处理：** 考虑当回文子串长度为1时，需要进行返回
   - 时间复杂度O(N^2) 空间复杂度O(N)
 ```
 class Solution {
@@ -591,6 +593,57 @@ public:
         }
         return false;
 
+    }
+};
+```
+### 143. 重排链表
+- 时间复杂度 O(N) 空间复杂度 O(1)
+- 三步走：
+  - 快慢指针找到链表中点 **找到的是链表的中间偏右(偶数长度下)**
+  - 反转后半段链表
+  - 合并两个链表
+- 细节是魔鬼
+  - 特殊情况处理
+  - 前后两段链表尾部要置null
+```
+class Solution {
+public:
+    void reorderList(ListNode* head) {
+        if (!head)
+            return;
+        // 快慢指针 寻找中点
+        ListNode* slow = head;
+        ListNode* fast = head;
+        while (fast && fast -> next) {
+            fast = fast -> next -> next;
+            slow = slow -> next;
+        }
+        cout << slow ->val << endl;
+        // 反转链表
+        ListNode* prev = nullptr;
+        ListNode* next = nullptr;
+        ListNode* cur  = slow -> next;
+        slow -> next = nullptr;
+        while (cur) {
+            next = cur -> next;
+            cur -> next = prev;
+            prev = cur;
+            cur = next;
+        }
+        // 合并链表
+        ListNode* p = head;
+        ListNode* tmp = nullptr;
+        cur = prev;
+        while (p && cur) {
+  
+            next = p -> next;
+            tmp = cur -> next;
+            p -> next = cur;
+            cur -> next = next;
+            p = next;
+            cur = tmp;
+            
+        }
     }
 };
 ```
