--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -177,3 +177,171 @@ public:
     }
 };
 ```
+
+
+### 240. 搜索二维矩阵 [Medium]
+- 二分查找法：
+  - 在对角线开始向下和向右的搜索
+
+```
+class Solution {
+public:
+    int rows = 0;
+    int cols = 0;
+    bool binarySearch(vector<vector<int>>& matrix, int target, int row) {
+        //cout << "binarySearch" << endl;
+        int left = row;
+        int right = rows - 1;
+        int col = row;
+        while (left <= right) {
+            //cout <<"l : " << left << " r :" << right << endl; 
+            int mid = left + (right - left)/2;
+            if (matrix[mid][col] == target) 
+                return true;
+            else if (matrix[mid][col] < target) {
+                left = mid + 1;
+            }
+            else if (matrix[mid][col] > target) {
+                right = mid - 1;
+            }
+        }
+        int low = row;
+        int high = cols - 1;
+        while (low <= high) {
+            //cout <<"low : " << low << " high :" << high << endl;
+            int mid = low + (high - low)/2;
+            if (matrix[row][mid] == target) 
+                return true;
+            else if (matrix[row][mid] < target) {
+                low = mid + 1;
+            }
+            else if (matrix[row][mid] > target) {
+                 high = mid - 1;
+            }
+        }
+        return false;
+    }
+    bool searchMatrix(vector<vector<int>>& matrix, int target) {
+        rows = matrix.size();
+        cols = matrix[0].size();
+        for (int i = 0; i < min(rows,cols); i ++) {
+            if (binarySearch(matrix, target, i))
+                return true;
+        }
+        return false;
+    }
+};
+```
+- **进阶做法**： 由于行和列都是有序的，可以将这个矩阵看作是一个搜索二叉树，
+  - **将左下角元素作为根节点，向上都是小于根节点的元素，向右都是大于根节点的元素**
+- 时间复杂度：`O(m+n)`
+```
+class Solution {
+public:
+
+    bool searchMatrix(vector<vector<int>>& matrix, int target) {
+        int row = matrix.size() - 1;
+        int col = 0;
+        while(row >=0 && col < matrix[0].size()) {
+            if (matrix[row][col] == target) 
+                return true;
+            else if (matrix[row][col] > target) {
+                row--; // 向小的方向移动
+            }
+            else if (matrix[row][col] < target) {
+                col++;
+            }
+        }
+        return false;
+    }
+};
+```
+
+###  74. 搜索二维矩阵 I [Medium]
+- 二分查找的利用
+  - 先搜第一列，找出小于目标值的第一行，然后再在行内进行二分查找
+  - 时间复杂度： `O(logm + logn)`
+```
+class Solution {
+public:
+    bool searchMatrix(vector<vector<int>>& matrix, int target) {
+        int low = 0;
+        int row = 0;
+        int high = matrix.size() - 1;
+        while(low <= high) {
+            int mid = low + (high - low) / 2;
+            if (matrix[mid][0] ==  target) 
+                return true;
+            else if (matrix[mid][0] < target) {
+                row = mid;
+                low = mid + 1;
+            }
+            else {
+                high = mid - 1;
+            }
+        }
+        //cout << row << endl;
+        if (matrix[row][0] > target || matrix[row].back() < target) 
+            return false;
+        int left = 0;
+        int right = matrix[row].size() - 1;
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            if (matrix[row][mid] ==  target) 
+                return true;
+            else if (matrix[row][mid] < target) {
+                left = mid + 1;
+            }
+            else {
+                right = mid - 1;
+            }
+        }
+        return false;
+    }
+};
+```
+
+### 54. 螺旋数组
+- 螺旋遍历
+  - 循环终止条件：**还有剩余的元素未遍历**
+  - 设置4个index 索引来进行
+```
+class Solution {
+public:
+    vector<int> spiralOrder(vector<vector<int>>& matrix) {
+        int row_l = 0;
+        int row_r = matrix.size() - 1;
+        int col_l = 0;
+        int col_r = matrix[0].size() - 1;
+        vector<int> ans;
+        int nums = matrix.size()* matrix[0].size();
+        while (nums >= 1) {
+            for (int i = col_l; i <= col_r && nums; i++) {
+                ans.push_back(matrix[row_l][i]);
+                nums--;
+            }
+            row_l++;
+           
+            for (int i = row_l; i <= row_r && nums; i++) {
+                ans.push_back(matrix[i][col_r]);
+                nums--;
+            }
+            cout << endl;
+            col_r--;
+            for (int i = col_r; i >= col_l && nums; i--) {
+                ans.push_back(matrix[row_r][i]);
+                nums--;
+                //cout << matrix[row_r][i] << " ";
+            }
+            row_r--;
+            for (int i = row_r; i >= row_l && nums; i--) {
+                ans.push_back(matrix[i][col_l]);
+                nums--;
+                //cout << matrix[i][col_l] << " ";
+            }
+            col_l++;
+        }
+        return ans;
+    }
+};
+```
