--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -411,3 +411,43 @@ public:
 };
 ```
 
+
+### 221. 最大正方形
+- 计算全为1的最大正方形面积
+- 定义`dp[i][j]`表示以i j为正方形右下角的最大边长，dp状态转移公式
+  - dp[i][j] = min(dp[i -1 ][j], dp[i][j-1], dp[i-1][j-1]) + 1
+- 时间复杂度O(N^2) 空间复杂度O(N^2)
+
+```
+class Solution {
+public:
+    
+    int maximalSquare(vector<vector<char>>& matrix) {
+        int rows = matrix.size();
+        int cols = matrix[0].size();
+        int ans = 0; // 考虑临界情况
+        vector<vector<int>> dp(rows, vector<int>(cols));
+        for (int i = 0; i < rows; i++) {
+            if (matrix[i][0] == '1') {
+                dp[i][0] = 1;
+                ans = 1;
+            }
+        }
+        for (int i = 0; i < cols; i++) {
+            if (matrix[0][i] == '1') {
+                dp[0][i] = 1;
+                ans = 1;
+            }
+        }
+        for (int i = 1; i < rows; i++) {
+            for (int j = 1; j < cols; j++) {
+                if (matrix[i][j]=='1') {
+                    dp[i][j] = min(dp[i - 1][j], min(dp[i][j - 1], dp[i - 1][j - 1])) + 1; 
+                    ans = max(ans, dp[i][j]);
+                }
+            }
+        }
+        return ans*ans;
+    }
+};
+```
