--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -66,7 +66,8 @@ public:
 - 计算最大差值，如下所示一次遍历，记录当前最小值并计算差值。
 - 时间复杂度O(n) 空间复杂度O(1)
 
-```class Solution {
+```
+class Solution {
 public:
     int maxProfit(vector<int>& prices) {
         int minprice=INT_MAX;
@@ -83,6 +84,171 @@ public:
     }
 };
 ```
+- 模板解法
+  - 只有一次交易机会
+  - 考虑 第一次买和第一次卖的情况
+  - 等价于寻找最小值及对应的最大差值
+  
+```
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        int buy= INT_MIN;
+        int sell=0;
+        for(auto p : prices){
+            buy = max(buy, -p); // 第一次买 -p
+            sell = max(sell, buy + p);
+        }
+        return sell;
+
+    }
+};
+```
+- **总结**
+  - 股票买卖的buy和sell，每次遍历时考虑当前状态下buy和sell的最优情况，
+  - buy = max(buy, -p) 买入时讨论：不买入/买入
+  - sell = max(sell, buy + p)  卖出时观察： 当前节点卖出的最佳
+### 122. 买卖股票的最佳时间 2 *
+- 买卖股票的次数不受限制，上一题是只能操作一次
+- **贪心算法**
+  - 取所有的上升段即可，涨了就卖
+
+```
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        int ans = 0;
+        for (int i = 1; i < prices.size(); i++) {
+            ans += max(0, prices[i] - prices[i - 1]);
+        }
+        return ans;
+    }
+};
+```
+- dp算法
+  - 定义`dp[i][0]` 表示当前没有股票在手的最大收益
+    - `dp[i][0] = max(dp[i - 1][0], dp[i-1][1] + prices[i])`
+  - 定义`dp[i][1]` 表示当前股票在手的最大收益
+    - `dp[i][1] = max(dp[i - 1][1], dp[i-1][0] - prices[i])`
+    - dp[0][0] = 0 dp[0][1] = - prices[0]
+
+
+- 通用模板解法
+
+```
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        int buy= INT_MIN;
+        int sell=0;
+        for(auto p : prices){
+            int buynow = max(buy, sell - p); // 第一次买 -p
+            int sellnow = max(sell, buy + p);
+            buy = buynow;
+            sell = sellnow;
+        }
+        return sell;
+    }
+};
+```
+
+### 123. 买卖股票的最佳时间 3 [Hard] *
+- **限制只能买卖2次**
+- 使用模板
+    - 分为四次判断：
+    - 第一次买
+    - 第一次卖
+    - 第二次买
+    - 第二次卖
+    - 每次取最大值
+```
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        int fstbuy = INT_MIN, fstsell = 0;
+        int secbuy = INT_MIN, secsell = 0;
+        for( auto p : prices) {
+            fstbuy = max(fstbuy, - p); // 第一次买 -p
+            fstsell = max(fstsell, fstbuy + p); // 第一次卖 buy + p
+            secbuy = max(secbuy, fstsell - p); // 第二次买 在fstsell的基础上-p
+            secsell = max(secsell, secbuy + p);
+        }
+        return secsell;
+    }
+};
+```
+
+### 188. 买卖股票的最佳时机 IV [Hard]*
+- 给定最大购买次数 `k`, 计算最大收益
+- 在上题的基础上，加入循环改进即可
+  - 使用数组存储每轮交易的状态buy/sell状态
+  - 每轮交易状态的更新与上面一致
+
+
+```
+class Solution {
+public:
+    int maxProfit(int k, vector<int>& prices) {
+        vector<int> buy (k + 1, INT_MIN);
+        vector<int> sell (k+1);
+        for (auto p : prices) {
+            for (int i = 1; i <= k; i++) {
+                buy[i] = max(buy[i], sell[i - 1] -p);
+                sell[i] = max(sell[i], buy[i] + p);
+            }
+        }
+        return sell.back();
+    }
+};
+```
+### 309. 最佳买卖股票时间含冷冻期 [*medium*]
+- 卖完一次股票后有一天的冷冻期，无法进行交易
+- 交易次数不做限制
+  - 跟第2个题目相比，唯一差异在于多一个冷冻限制，
+  - 整体代码一致
+  - 为了对冷冻期进行处理，即避免sell后里面进行交易，所以就需要**对其中的sell数据更新做延迟，延迟一天更新即可**
+  - 因此取临时变量lock，取sell更新前的值
+
+```
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        int buy = INT_MIN;
+        int sell = 0;
+        int lock = 0;
+        for (auto p : prices) {
+            int buynow = max(buy, lock - p);
+            int sellnow = max(sell, buy + p);
+            lock = sell;
+            sell = sellnow;
+            buy = buynow;
+        }
+        return sell;
+    }
+};
+```
+
+### 714. 最佳买卖股票时间含手续费 [*medium*]
+- 与309一致，添加了一些小限制，只需要在基本的操作上添加逻辑即可
+  - 把手续费加入buy/sell的更新计算中，由于sell中`buy+p` 会有溢出bug，还是加在buy的操作中
+
+```
+class Solution {
+public:
+    int maxProfit(vector<int>& prices, int fee) {
+        int buy = INT_MIN;
+        int sell = 0;
+        for (auto p : prices) {
+            int buynow = max(buy, sell - p - fee);
+            int sellnow = max(sell,  buy + p);
+            sell = sellnow;
+            buy = buynow;
+        }
+        return sell;
+    }
+};
+```
+
 
 
 ### 53. 最大子序和 *
@@ -448,6 +614,85 @@ public:
             }
         }
         return ans*ans;
+    }
+};
+```
+
+
+### 72. 编辑距离 *[Hard]*
+
+- 动态规划解题
+- 定义`dp[i][j]`表示把**word1的前i个字母替换为word2的前j个字母**的最少操作数量
+  - 那么动态规划的转移方程为;
+  -  `dp[i][j] = min(dp[i-1][j] + 1, dp[i][j-1] + 1, dp[i-1][j-1] + (w1[i]!=w2[j])`
+  -  初始化： `dp[i][0] = i`
+  -  根据dp定义，那么我们应该初始化[m+1][n+1]的二维数组，返回dp[m][n]作为最终结果
+- 对于特殊情况，即其中一个word为空时，编辑距离为非空word的长度
+- 尤其要注意索引的设置
+  - 取字符串内元素的索引和dp的索引
+- 时间复杂度O(N^2) 空间复杂度O(N^2)
+```
+class Solution {
+public:
+    int minDistance(string word1, string word2) {
+        int l1 = word1.size();
+        int l2 = word2.size();
+        if (word1.empty())
+            return l2;
+        if (word2.empty())
+            return l1;
+        vector<vector<int>> dp(l1 + 1, vector<int>(l2 + 1));
+        for (int i = 1; i< l1 + 1; i++) {
+            dp[i][0] = i;
+        }
+        for (int i = 1; i< l2 + 1; i++) {
+            dp[0][i] = i;
+        }
+        for (int i = 1; i < l1 + 1; i++) {
+            for (int j = 1; j< l2 + 1; j++) {
+                int tmp = 1;
+                // 对于字符串取值，需要注意索引的差异
+                if (word1[i-1] == word2[j-1])
+                    tmp = 0;
+                dp[i][j] = min(dp[i-1][j] + 1, min(dp[i][j-1] + 1, dp[i-1][j-1] + tmp));
+            }
+        }
+        return dp[l1][l2];
+    }
+};
+```
+- 进一步优化空间使用，dp问题的常见优化，将二维数组变为一维数组
+  - 使用一维数组记录当前行的情况，在遍历的同时进行更新
+  - 代码易读性大幅下降
+
+```
+class Solution {
+public:
+    int minDistance(string word1, string word2) {
+        int l1 = word1.size();
+        int l2 = word2.size();
+        int prev = 0;
+        if (word1.empty())
+            return l2;
+        if (word2.empty())
+            return l1;
+        vector<int> dp((l2 + 1));
+        for (int i = 0; i < l2 + 1; i++) {
+            dp[i] = i;// dp[i][j]
+        }
+
+        for (int i = 1; i < l1 + 1; i++) {
+            prev = dp[0]; // dp[i-1][j-1]
+            dp[0] = i; // dp[i-1][0] 更新dp赋值
+            for (int j = 1; j < l2 + 1; j++) {
+                // dp[i][j] = dp[i-1][j] dp[i][j-1]
+                // 提前存储上一行的状态，避免被覆盖
+                int tmp = dp[j];
+                dp[j] = min(dp[j] + 1, min(dp[j-1] + 1, prev + int(word1[i-1] != word2[j-1])));
+                prev = tmp;
+            }
+        }
+        return dp.back();
     }
 };
 ```
