--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -345,3 +345,85 @@ public:
     }
 };
 ```
+
+### 718. 最长重复子数组
+> 给两个整数数组 A 和 B ，返回两个数组中公共的、长度最长的子数组的长度。
+
+- 滑窗方法解题，**分别移动A/B，调整两个数组的对齐位置，然后进行同位置元素对比，记录连续重复元素的个数**
+  - 时间复杂度 O(N+M)*min(n,m) 
+  - 空间复杂度 O(1)
+
+```
+class Solution {
+public:
+    int findRepeat(vector<int> A, vector<int> B, int addA, int addB, int len) {
+        int res = 0;
+        int k = 0;
+        // 记录当前遍历下的最优结果
+        for (int i = 0; i < len; i++) {
+            if (A[addA + i] == B[addB + i])
+                k++;
+            else {
+                k = 0;
+            }
+            res = max(res, k);
+        }
+        return res; 
+
+    }
+    int findLength(vector<int>& A, vector<int>& B) {
+        int m = A.size();
+        int n = B.size();
+        int ans = 0;
+        // 左移B数组
+        // 当结果大于/等于当前对齐长度后break
+        for (int i = 0; i < n - 1; i++) {
+            int len = min(m, n - i);
+            if (ans >= len)
+                break;
+            ans = max(findRepeat(A, B, 0, i, len), ans);
+        }
+        // 左移A数组
+        // 当结果大于/等于当前对齐长度后break
+        for (int i = 0; i < m - 1; i++) {
+            int len = min(n, m - i);
+            if (ans >= len)
+                break;
+            ans = max(findRepeat(A, B, i, 0, len), ans);
+        }
+        return ans;
+    }
+};
+```
+
+- **动态规划**解法
+  - 定义`dp[i][j]` 表示A数组以i开始和B数组以j开始的子串的最大公共长度；
+  - dp[i][j] = dp[i+1][j+1] + 1 if dp[i] == dp[j]; otherwise dp[i][j] = 0;
+  - 最终结果为dp数组中的最大值
+- 时间复杂度 `O(M*N)` 空间复杂度 `O(M*N)`
+```
+class Solution {
+public:
+    int findLength(vector<int>& A, vector<int>& B) {
+        int m = A.size();
+        int n = B.size();
+        int ans = 0;
+        // 多增加一维，便于初始化
+        vector<vector<int>> dp(m + 1, vector<int> (n + 1));
+        //反向遍历 更新dp数组
+        for (int i = m - 1; i >= 0; i--) {
+            for (int j = n - 1; j >= 0; j--) {
+                if (A[i] == B[j]) {
+                    dp[i][j] = dp[i + 1][j + 1] + 1;
+                }
+                else {
+                    dp[i][j] = 0;
+                }
+                ans = max(ans, dp[i][j]);
+            }
+        }
+        return ans;
+    }
+};
+```
+
