--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -421,3 +421,38 @@ public:
     }
 };
 ```
+
+### 88. 合并两个有序数组
+- 给定两个有序数组a,b， 其中a数组空间比较大，可以容纳a+b两个数组
+- 思路1:  合并后排序
+- 思路2： 使用双指针，借助额外空间存储a，双指针合并
+- 思路3:  逆向双指针，从后往前遍历，将最大值往a的尾部填充
+    - 最后将未合并的部分再添加到a中即可
+```
+class Solution {
+public:
+    void merge(vector<int>& nums1, int m, vector<int>& nums2, int n) {
+        // 
+        int right = nums1.size() - 1;
+        int p1 = m - 1;
+        int p2 = n - 1;
+        while (p1 >= 0 && p2 >= 0) {
+            if (nums1[p1] > nums2[p2]) {
+                nums1[right] = nums1[p1];
+                right--;
+                p1--;
+            } else {
+               nums1[right] = nums2[p2];
+                right--;
+                p2--; 
+            }
+        }
+        // 处理剩余部分
+        while(p2 >= 0) {
+            nums1[right] = nums2[p2];
+            right--;
+            p2--; 
+        }
+    }
+};
+```
