--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -1136,6 +1136,55 @@ public:
     }
 };
 ```
+### byteDance 补充题目： 木头切割问题 
+> 给定长度为n的数组，每个元素代表一个木头的长度，木头可以任意截断，从这堆木头中截出至少k个相同长度为m的木块。已知k，求max(m)。
+> 输入两行，第一行n, k，第二行为数组序列。输出最大值
+
+- 基本操作： 暴力方法：从1 ～ maxLen进行遍历，判断是否满足有k个元素大/等于该值
+- 二分法，搜索空间[1, maxLen]， 边界要求，寻找最大右边界
+    - 是对二分查找的灵活应用
+    - 时间复杂度 O（N*logN）
+    - 细节是魔鬼： **需要注意check的时候计算num的方式，一个木头可能分出多段目标长度**；
+
+```
+bool check(vector<int> arr, int k, int length) {
+    int num = 0;
+    
+    for (int i = 0; i < arr.size(); i++) {
+        //cout << arr[i] << " ";
+        if (arr[i] >= length)
+            num += (arr[i]/length);
+        //cout << num << " ";
+    }
+    //cout << endl;
+    cout << "length: " << length << ' ' << num << endl;
+    return num >= k;
+}
+
+
+int findMaxLen(vector<int> arr, int k) {
+    int l = 1;
+    int r = 1;
+    for (int i = 0; i<arr.size(); i++) {
+        r = max(r, arr[i]);
+    }
+    cout << l << ' ' << r << endl;
+    while(l <= r) {
+        int mid = l + (r - l) / 2; 
+        cout << 'm' << mid << endl;
+        cout << check(arr, k , mid ) << endl;
+        if (check(arr, k, mid)) {
+            l = mid + 1;
+        }
+        else {
+            r= mid - 1;
+        }
+        cout << "l: " << l << " r :" << r  << endl;
+    }
+    return r;
+}
+
+```
 
 ## 总结体会
 - 二分查找的应用思考：本质上需要在一定空间上按照某种依据进行答案搜索的情况，可以通过二分查找缩小搜索空间，严格依赖有序性。
