--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -16,7 +16,8 @@
 - [3. 无重复字符的最长子串 [Medium] [Tencent]](#3-无重复字符的最长子串-medium-tencent)
 - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
 - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
-- [143. 重排链表](#143-重排链表)
+- [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
+- [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
 
 <!-- /code_chunk_output -->
 
@@ -596,54 +597,109 @@ public:
     }
 };
 ```
-### 143. 重排链表
-- 时间复杂度 O(N) 空间复杂度 O(1)
-- 三步走：
-  - 快慢指针找到链表中点 **找到的是链表的中间偏右(偶数长度下)**
-  - 反转后半段链表
-  - 合并两个链表
-- 细节是魔鬼
-  - 特殊情况处理
-  - 前后两段链表尾部要置null
+### 224. 基础计算器 [Hard] ***
+- 实现具有加减功能的计算器，考虑`+-` `()`括号的影响
+- **基于栈的结构进行实现**
+- 逻辑上，加减需要记录其对应的符号即可
+- 其他复杂的部分在括号的处理，在进入括号时需要利用栈保存之前的数据状态，包括sign和结果，并重置目前状态
+  - 最后遇到右括号时，进行出栈操作，进行结果恢复和更新
+  
 ```
 class Solution {
 public:
-    void reorderList(ListNode* head) {
-        if (!head)
-            return;
-        // 快慢指针 寻找中点
-        ListNode* slow = head;
-        ListNode* fast = head;
-        while (fast && fast -> next) {
-            fast = fast -> next -> next;
-            slow = slow -> next;
+    int calculate(string s) {
+        stack<int> st;
+        int num = 0;
+        int  sign = 1;
+        int res = 0;
+        for (int i = 0; i < s.size(); i++) {
+            char c = s[i];
+            if (isdigit(c)) {
+                num = num * 10 + (c - '0');
+            }
+            if (c == '+' || c == '-') {
+                // 计算上一个值的情况 sign记录当前的符号
+                res += sign * num;
+                num = 0;
+                // 更新符号
+                sign = c == '+' ? 1 : -1; 
+            }
+            else if (c == '(') {
+                // 入栈操作 存储之前的res和符号
+                st.push(res);
+                st.push(sign);
+                res = 0; // 状态重置
+                sign = 1; //  状态重置
+            }
+            else if (c == ')') {
+                res += num * sign;
+                
+                res *= st.top(); // 出栈 之前记录的sign
+                st.pop();
+                res += st.top();
+                st.pop();
+                num = 0;
+            }
         }
-        cout << slow ->val << endl;
-        // 反转链表
-        ListNode* prev = nullptr;
-        ListNode* next = nullptr;
-        ListNode* cur  = slow -> next;
-        slow -> next = nullptr;
-        while (cur) {
-            next = cur -> next;
-            cur -> next = prev;
-            prev = cur;
-            cur = next;
+        // 不要忽略最后一个数
+        res += sign*num;
+        return res;
+    }
+};
+```
+
+### 227. 基本计算器II [Medium]
+
+- 给你一个字符串表达式 s ，请你实现一个基本计算器来计算并返回它的值。整数除法仅保留整数部分
+  - 包括 + - * / ，**不包含括号**
+  - 使用栈进行简单存储即可，没有括号的情况下要比上题简单多
+
+- 将数字和其对应的符号运算后存入stack，最后计算stack元素之和即可
+  - 其中 `*` `/` 处理需要取stack的栈顶与当前元素进行计算
+  - 再运算结合需要更新当前num和符号信息
+
+```
+class Solution {
+public:
+    int calculate(string s) {
+        stack<int> st;
+        char sign = '+';
+        int num = 0;
+        for (int i = 0; i < s.size(); i++) {
+            char c = s[i];
+            if (isdigit(c)) {
+                num = num * 10 + (c - '0');
+            }
+            // 临界情况： 当遍历到最后一个字符时，如果最后一个字符还是数字的话，还是要做处理
+            if( !isdigit(c) && c != ' ' || i == s.size() - 1) {
+                if (sign == '+') {
+                    st.push(num);
+                    sign = 1;
+                }
+                else if (sign == '-') {
+                    st.push(-num);
+                }
+                else if (sign == '/') {
+                    int a = st.top();
+                    st.pop();
+                    st.push(a / num);
+                }
+                else if (sign == '*') {
+                    int a = st.top();
+                    st.pop();
+                    st.push(a * num);   
+                }
+                // 更新当前数字和符号
+                num = 0;
+                sign = c;
+            } 
         }
-        // 合并链表
-        ListNode* p = head;
-        ListNode* tmp = nullptr;
-        cur = prev;
-        while (p && cur) {
-  
-            next = p -> next;
-            tmp = cur -> next;
-            p -> next = cur;
-            cur -> next = next;
-            p = next;
-            cur = tmp;
-            
+        int ans = 0;
+        while (!st.empty()) {
+            ans += st.top();
+            st.pop();
         }
+        return ans;
     }
 };
 ```
