--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -13,9 +13,10 @@
 - [234. 回文链表判断](#234-回文链表判断)
 - [141. 环形链表操作](#141-环形链表操作)
 - [142. 环形链表2 [Medium]](#142-环形链表2-medium)
-- [328. 奇偶数组  [Medium]](#328-奇偶数组-medium)
+- [328. 奇偶数组  [Medium]](#328-奇偶数组--medium)
 - [160. 相交链表](#160-相交链表)
 - [146. LRU cache结构设计 [Medium]](#146-lru-cache结构设计-medium)
+- [143. 重排链表](#143-重排链表)
 - [小结](#小结)
 
 <!-- /code_chunk_output -->
@@ -741,6 +742,59 @@ public:
     }
 };
 ```
+
+### 143. 重排链表
+- 时间复杂度 O(N) 空间复杂度 O(1)
+- 三步走：
+  - 快慢指针找到链表中点 **找到的是链表的中间偏右(偶数长度下)**
+  - 反转后半段链表
+  - 合并两个链表
+- 细节是魔鬼
+  - 特殊情况处理
+  - 前后两段链表尾部要置null
+```
+class Solution {
+public:
+    void reorderList(ListNode* head) {
+        if (!head)
+            return;
+        // 快慢指针 寻找中点
+        ListNode* slow = head;
+        ListNode* fast = head;
+        while (fast && fast -> next) {
+            fast = fast -> next -> next;
+            slow = slow -> next;
+        }
+        cout << slow ->val << endl;
+        // 反转链表
+        ListNode* prev = nullptr;
+        ListNode* next = nullptr;
+        ListNode* cur  = slow -> next;
+        slow -> next = nullptr;
+        while (cur) {
+            next = cur -> next;
+            cur -> next = prev;
+            prev = cur;
+            cur = next;
+        }
+        // 合并链表
+        ListNode* p = head;
+        ListNode* tmp = nullptr;
+        cur = prev;
+        while (p && cur) {
+  
+            next = p -> next;
+            tmp = cur -> next;
+            p -> next = cur;
+            cur -> next = next;
+            p = next;
+            cur = tmp;
+            
+        }
+    }
+};
+```
+
 ### 小结
 - 掌握链表的构成方式(单向/双向)
 - 掌握基本的操作方式：**删除节点、遍历链表、反转链表以及局部反转链表的操作**
