--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -18,6 +18,7 @@
 - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
 - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
 - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
+- [402. 移除K个字符](#402-移除k个字符)
 
 <!-- /code_chunk_output -->
 
@@ -601,7 +602,7 @@ public:
 - 实现具有加减功能的计算器，考虑`+-` `()`括号的影响
 - **基于栈的结构进行实现**
 - 逻辑上，加减需要记录其对应的符号即可
-- 其他复杂的部分在括号的处理，在进入括号时需要利用栈保存之前的数据状态，包括sign和结果，并重置目前状态
+- 其他复杂的部分在括号的处理，在进入括号时需要利用栈保存之前的数据状态，**包括sign和结果，并重置目前状态**
   - 最后遇到右括号时，进行出栈操作，进行结果恢复和更新
   
 ```
@@ -656,14 +657,14 @@ public:
 
 - 将数字和其对应的符号运算后存入stack，最后计算stack元素之和即可
   - 其中 `*` `/` 处理需要取stack的栈顶与当前元素进行计算
-  - 再运算结合需要更新当前num和符号信息
+  - 再运算结合需要更新当前num和符号信息，本质上与上题一致
 
 ```
 class Solution {
 public:
     int calculate(string s) {
         stack<int> st;
-        char sign = '+';
+        char sign = '+'; // 初始化默认符号 + 
         int num = 0;
         for (int i = 0; i < s.size(); i++) {
             char c = s[i];
@@ -702,4 +703,75 @@ public:
         return ans;
     }
 };
+```
+
+- **考虑带括号的情况**
+    - 基于递归的思路，当遇到左括号时需要进行递归计算，到遇到右括号时退出递归
+    - 在上面代码的基础上加上递归的处理
+    - 为了避免递归返回后重复访问，可以在遍历过程中将历史遍历字符设为空格
+
+```
+class Solution {
+public:
+    int calculate(string& s, int index) {
+        stack<int> st;
+        char sign = '+'; // 初始化默认符号 + 
+        int num = 0;
+        for (int i = index; i < s.size(); i++) {
+            char c = s[i];
+            if (isdigit(c)) {
+                num = num * 10 + (c - '0');
+            }
+            if (c == '(') {
+                num = calculate(s, i + 1);
+            }
+            // 临界情况： 当遍历到最后一个字符时，如果最后一个字符还是数字的话，还是要做处理
+            if( !isdigit(c) && c != ' ' || i == s.size() - 1) {
+                if (sign == '+') {
+                    st.push(num);
+                    sign = 1;
+                }
+                else if (sign == '-') {
+                    st.push(-num);
+                }
+                else if (sign == '/') {
+                    int a = st.top();
+                    st.pop();
+                    st.push(a / num);
+                }
+                else if (sign == '*') {
+                    int a = st.top();
+                    st.pop();
+                    st.push(a * num);   
+                }
+                // 更新当前数字和符号
+                num = 0;
+                sign = c;
+            } 
+            // 避免重复访问 将遍历过的字符都设为空格
+            s[i] = ' ';
+            // 结束当前循环
+            if (c == ')') {
+                
+                break;
+            }
+        }
+        int ans = 0;
+        while (!st.empty()) {
+            ans += st.top();
+            st.pop();
+        }
+        return ans;
+    }
+};
+```
+
+### 402. 移除K个字符
+- 单调栈做法
+- 解题模板：https://leetcode-cn.com/problems/remove-k-digits/solution/yi-zhao-chi-bian-li-kou-si-dao-ti-ma-ma-zai-ye-b-5/
+  - 从左到右遍历，对于每一个遍历到的元素，我们决定是丢弃还是保留
+  - 丢弃相邻位置上大的元素，使用单调递增栈进行数据组织
+- 时间复杂度O(N) 
+- 最后处理临界情况： 当全部字符都被移除的情况； 计算剩余字符串长度，从栈中取出
+```
 ```
