--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -427,3 +427,73 @@ public:
 };
 ```
 
+
+### 209. 长度最小的子数组
+- 计算数组中和大于目标值的最小长度的连续子数组
+- 做法一： 前缀和 + 二分搜索
+  - 计算各位置的前缀和，由于前缀和数组是有序的，可以通过二分搜索的方法来查找后续是否有满足target和要求的前缀和
+  - 时间复杂度 O(nlogn) 空间复杂度 O(n)
+```
+class Solution {
+public:
+     // 寻找 <= pre - target
+    int binarySearch(int target, int left, int right, vector<int>& nums) {
+        int res = -1;
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            if (nums[mid] >= target) {
+                res = mid;
+                right = mid - 1;
+            }
+            else {
+                left = mid + 1;
+            }
+        }
+        return res;
+    }
+    int minSubArrayLen(int target, vector<int>& nums) {
+        vector<int> sums( nums.size() + 1);
+        for (int i = 0; i < nums.size(); i++) {
+            sums[i + 1] = sums[i] + nums[i];
+        }
+        int left = 0;
+        int ans = nums.size() + 1;
+        for (int i = 1; i <= nums.size(); i++) {
+            int bound = binarySearch(sums[i - 1] + target, left, sums.size() - 1, sums);
+            if (bound == -1)
+                continue;
+            ans = min(ans, bound - (i - 1));
+            left = bound;
+        }
+        return ans == nums.size() + 1 ? 0 : ans;
+    }
+};
+```
+
+- **更简单的滑窗做法**
+  - 设置左右指针，从左到右遍历，当当前窗口内和满足条件时即记录长度，并调整左指针
+    - 时间复杂度O(N) 空间复杂度 O(N)
+
+class Solution {
+public:
+
+    int minSubArrayLen(int target, vector<int>& nums) {
+        int left = 0;
+        int right = 0;
+        int length = nums.size();
+        int sum = 0;
+        int ans = length + 1;
+        while (right < length && left <= right) {
+            sum += nums[right];
+            // 移动左指针，更新结果
+            while (sum >= target) {
+                ans = min(right - left + 1, ans);
+                sum -= nums[left];
+                left ++;
+            }
+            // 移动右指针
+            right++;
+        }
+        return ans == length + 1 ? 0 : ans;
+    }
+};
