--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -392,6 +392,7 @@ public:
 ```
 
 ### 55. 跳跃游戏 [Medium]
+- 判断是否可达
 - 可以通过贪心的思路进行处理
 - 计算最大路径，**需要判断当前位置是否可达**即`i<=maxStep`
 
@@ -413,6 +414,55 @@ public:
     }
 };
 ```
+### 45. 跳跃游戏 II 
+> 数组中的每个元素代表你在该位置可以跳跃的最大长度。你的目标是使用最少的跳跃次数到达数组的最后一个位置
+
+- 基于dp的思路，时间复杂度 O(N^2) 空间复杂度O(N)
+
+```
+class Solution {
+public:
+    int jump(vector<int>& nums) {
+        vector<int> dp(nums.size(), INT_MAX);
+        dp[0] = 0;
+        for (int i = 0; i < nums.size(); i++) {
+            //cout << dp[i] << endl;
+            for (int k = i + 1; k <= nums[i] + i && k < nums.size(); k++ ) {
+                dp[k] = min(dp[k], dp[i] + 1);
+            }
+        }
+        return dp[nums.size() - 1];
+    }
+};
+```
+
+- 本题本质上还是典型的**贪心算法**，可以通过贪心的思路来提高效率
+    - 记录当前位置的最大可达边界，当当前位置越过之前最大边界时即需要跳跃
+    - step++
+  - 时间复杂度 O(N) 空间复杂度O(1)
+
+```
+class Solution {
+public:
+    int jump(vector<int>& nums) {
+        int length = nums.size();
+        int end = 0;
+        int steps = 0;
+        int maxPosition = 0; // 最大可大边界
+        for (int i = 0; i < length - 1; i++) {
+            //cout << dp[i] << endl;
+            maxPosition = max(maxPosition, nums[i] + i); // 更新当前最大可达边界
+            if (i == end) {
+                // 当到达前一个边界时， 需要进行跳跃更新
+                end = maxPosition;
+                steps++;
+            }
+        }
+        return steps;
+    }
+};
+```
+
 ### 62. 不同路径 [Medium]
 - 经典的dp任务： **给出矩形，计算到达右下角的路径数量**
   - O(MN)
