--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -9,7 +9,7 @@
 - [字符的有效异位符](#字符的有效异位符)
 - [125. 回文串验证](#125-回文串验证)
 - [8.字符串转换整数 (atoi) Mid](#8字符串转换整数-atoi-mid)
-- [8. 实现strStr() 子串匹配查找](#8-实现strstr-子串匹配查找)
+- [8. 实现strStr() 子串匹配查找 ***](#8-实现strstr-子串匹配查找-)
 - [38.外观数列](#38外观数列)
 - [14. 最长公共前缀](#14-最长公共前缀)
 - [49. 字母异位词组合](#49-字母异位词组合)
@@ -18,7 +18,7 @@
 - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
 - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
 - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
-- [402. 移除K个字符](#402-移除k个字符)
+- [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
 
 <!-- /code_chunk_output -->
 
@@ -230,12 +230,11 @@ public:
 };
 ```
 
-### 8. 实现strStr() 子串匹配查找
+### 8. 实现strStr() 子串匹配查找 ***
 
 - KMP查找算法，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 时间复杂度(O(N))
 - 常见面试题，需要深入了解并记住该原理，可以动态规划求解：前缀是指不包含最后一个字符的所有以第一个字符开头的连续子串；后缀是指不包含第一个字符的所有以最后一个字符结尾的连续子串
-- 字符串匹配算法：还有Sunday 匹配机制相对比较简单：
-    - 
+- 字符串匹配算法：还有Sunday 匹配机制相对比较简单： 
 
 ```
 class Solution {
@@ -766,7 +765,7 @@ public:
 };
 ```
 
-### 402. 移除K个字符
+### 402. 移除K个字符 [Medium]
 - 单调栈做法
 - 解题模板：https://leetcode-cn.com/problems/remove-k-digits/solution/yi-zhao-chi-bian-li-kou-si-dao-ti-ma-ma-zai-ye-b-5/
   - 从左到右遍历，对于每一个遍历到的元素，我们决定是丢弃还是保留
@@ -774,4 +773,29 @@ public:
 - 时间复杂度O(N) 
 - 最后处理临界情况： 当全部字符都被移除的情况； 计算剩余字符串长度，从栈中取出
 ```
+class Solution {
+public:
+    string removeKdigits(string num, int k) {
+        vector<char> st;
+        int remain = num.size() - k;
+        for (int i = 0; i < num.size(); i++) {
+            //单调栈
+            while (k && !st.empty() && num[i] < st.back()) {
+                st.pop_back();
+                k-=1;
+            } 
+            st.push_back(num[i]);
+        }
+        string ans = "";
+        bool flag = false;
+        for (int i = 0; i < remain; i++) {
+            if (!flag && st[i] == '0')
+                continue;
+            ans.push_back(st[i]);
+            flag = true;
+        }
+        
+        return ans.empty() ? "0" : ans;
+    }
+};
 ```
