--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -746,3 +746,116 @@ public:
     }
 };
 ```
+
+### 91. 解码方法 [Medium]
+- 将数字串解码为字符串
+- **并没有单独 '0' 所对应的解码，只有 '10'、'20' 可以解码为字符串**。
+- 提示中还有包含前导零的说明, 并非所给的字符串都可以解码
+- 基于动态规划解题，利用上面提到的限制
+- **dp[i] 表示前i个字符可以构成的字符串数量**
+    - dp[i] = dp[i - 1] + dp[i-2]
+    - dp[i] = dp[i - 2]
+    - 初始化： dp[0] = 1 dp[1] = 1
+```
+class Solution {
+public:
+    int numDecodings(string s) {
+     // 0 没有对应字符  只有10 20 可以转换， 当出现0的时候要考虑是否是10/20
+     vector<int> dp(s.size() + 1);
+     if (s[0] == '0')
+        return 0;
+    dp[0] = 1;
+    dp[1] = 1;
+    for (int i = 2; i <= s.size(); i++) {
+         if (s[i - 1] == '0' && (s[i - 2] != '1' && s[i - 2] != '2')) {
+            return 0;
+        }
+        if  (s[i - 2] == '2' && (s[i - 1] >= '0' && s[i - 1] <= '6' )) {
+            if (s[i - 1] == '0')
+                dp[i] = dp[i - 2];
+            else 
+                dp[i] = dp[i - 1] + dp[i - 2];
+            // cout << "1";
+        }
+        else if  (s[i - 2] == '1' && s[i - 1] >= '0' && s[i - 1] <= '9'  ) {
+            if (s[i - 1] == '0')
+                dp[i] = dp[i - 2];
+            else 
+                dp[i] = dp[i - 1] + dp[i - 2];
+           // cout << "11";
+        }
+        else {
+            dp[i] = dp[i - 1];
+        }
+        //cout << dp[i] << endl;
+    }   
+    return dp[s.size()];
+
+    }
+};
+```
+- 将dp数组优化掉: 状态转移中仅依赖前两个值，直接动态更新这两个值即可
+
+```
+class Solution {
+public:
+    int numDecodings(string s) {
+     // 0 没有对应字符  只有10 20 可以转换， 当出现0的时候要考虑是否是10/20
+     if (s[0] == '0')
+        return 0;
+    int pre = 1;
+    int cur = 1;
+    for (int i = 2; i <= s.size(); i++) {
+        int tmp = cur;
+         if (s[i - 1] == '0' && (s[i - 2] != '1' && s[i - 2] != '2')) {
+            return 0;
+        }
+        if  (s[i - 2] == '2' && (s[i - 1] >= '0' && s[i - 1] <= '6' )) {
+            if (s[i - 1] == '0')
+                cur  = pre;
+            else 
+                cur = cur + pre;
+            // cout << "1";
+        }
+        else if  (s[i - 2] == '1' && s[i - 1] >= '0' && s[i - 1] <= '9'  ) {
+            if (s[i - 1] == '0')
+                cur = pre;
+            else 
+               cur = cur + pre;
+           // cout << "11";
+        }
+        pre = tmp;// 更新 dp[i-2]
+        //cout << dp[i] << endl;
+    }   
+    return cur;
+    }
+};
+```
+
+### 剑指46. 把数字翻译成字符串
+- 与上一题是相似的，限制条件变少
+- **dp[i] 表示前i个字符可以构成的字符串数量**
+- 限制当前值要在10~25之间
+```
+class Solution {
+public:
+    int translateNum(int num) {
+        string s = to_string(num);
+        vector<int> dp (s.size() + 1);
+        dp[0] = 1;
+        dp[1] = 1;
+        for (int i = 2; i <= s.size(); i++) {
+            if (s[i - 2]=='1'&& s[i - 1]>='0' && s[i - 1]<='9') {
+                dp[i] = dp[i - 1] + dp[i - 2];
+            }
+            else if (s[i - 2]=='2'&& s[i - 1]>='0' && s[i - 1]<='5') {
+                dp[i] = dp[i - 1] + dp[i - 2];
+            }
+            else {
+                dp[i] = dp[i - 1];
+            }
+        }
+        return dp[s.size()];
+    }
+};
+```
