--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -499,3 +499,45 @@ public:
     }
 };
 ```
+
+### 31. 下一个排列 [Medium]
+
+- 算法需要将给定数字序列重新排列成字典序中下一个更大的排列。如果不存在下一个更大的排列，则将数字重新排列成最小的排列
+> 我们希望下一个数比当前数大，这样才满足“下一个排列”的定义。因此只需要将后面的「大数」与前面的「小数」交换，就能得到一个更大的数。比如 123456，将 5 和 6 交换就能得到一个更大的数 123465
+
+> 还希望**下一个数增加的幅度尽可能的小**，这样才满足“下一个排列与当前排列紧邻“的要求。为了满足这个要求:
+
+1. 在尽可能靠右的低位进行交换，需要从后向前查找
+2. 将一个 尽可能小的「大数」 与前面的「小数」交换。比如 123465，下一个排列应该把 5 和 4 交换而不是把 6 和 4 交换
+3. 将「大数」换到前面后，**需要将「大数」后面的所有数重置为升序，升序排列就是最小的排列**。以 123465 为例：首先按照上一步，交换 5 和 4，得到 123564；然后需要将 5 之后的数重置为升序，得到 123546。显然 123546 比 123564 更小，123546 就是 123465 的下一个排列
+
+- 关键两个步骤： 低位交换 和 后序序列的翻转
+  - 低位交换： 找到相邻的< 组合， 
+```
+class Solution {
+public:
+    void nextPermutation(vector<int>& nums) {
+        int length = nums.size();
+        if (length <= 1)
+            return;
+        int p1 = length - 2;
+        int p2 = length - 1;
+        int tmp = length - 1;
+        // 寻找低位
+        while (p1 >= 0 && nums[p1] >= nums[p1 + 1]) {
+            p1--;
+        }
+        // 后序元素跟低位进行交换
+        if (p1 >= 0) {
+            // 寻找后面第一个大于 低位的元素
+            while (tmp >= 0 && nums[p1] >= nums[tmp]) {
+                tmp--;
+            }
+            swap(nums[tmp], nums[p1]);
+        }
+        // 翻转后面的序列
+        reverse(nums.begin() + p1 + 1, nums.end());
+    }
+};
+```
+
