--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -17,6 +17,7 @@
 - [160. 相交链表](#160-相交链表)
 - [146. LRU cache结构设计 [Medium]](#146-lru-cache结构设计-medium)
 - [143. 重排链表](#143-重排链表)
+- [23. 合并K个升序链表 [Hard]](#23-合并k个升序链表-hard)
 - [小结](#小结)
 
 <!-- /code_chunk_output -->
@@ -255,29 +256,35 @@ public:
 - 对于reverse中m==1 表明已经到达待翻转位置：
 
 ```
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
 class Solution {
 public:
-    ListNode * successor=NULL;
-    ListNode* reverseN(ListNode* head,int n) {
-        //ListNode* dummpy_node=new ListNode(0,head);
-        if(n==1){
-            successor=head->next;
+    ListNode* successor = nullptr;
+    ListNode* reverseHead(ListNode* head, int n) {
+        if (n == 1) {
+            successor = head -> next;
             return head;
         }
-        ListNode* p=reverseList(head->next,n-1);
-        head->next->next=head;
-        head->next=successor;
+        ListNode* p = reverseHead(head -> next, n - 1);
+        head -> next -> next = head;
+        head -> next = successor;
         return p;
     }
-    ListNode* reversePart(ListNode* head,int m,int n ) {
-        //ListNode* dummpy_node=new ListNode(0,head);
-        if(m==1){
-            return reverseN(head,n);
-            //return head;
+    ListNode* reverseBetween(ListNode* head, int left, int right) {
+        if (left == 1) {
+            return reverseHead(head, right);
         }
-        head->next=reverseList(head->next,m-1,n-1);
-        
-        return p;
+        head -> next = reverseBetween(head -> next, left - 1, right - 1);
+        return head;
     }
 };
 ```
@@ -794,6 +801,98 @@ public:
     }
 };
 ```
+
+### 23. 合并K个升序链表 [Hard]
+- 给定K个有序链表，合并成一个有序链表
+- 基于堆排序每次取当前的最小值，即利用小顶堆，将堆顶加入链表，
+  - 之后出堆，将出堆节点的后继节点加入堆
+  - **设置dummpy node用于记录起始节点**
+- 时间复杂度： O(nlogn) 空间复杂度 O(k) 堆的空间
+```
+class Solution {
+public:
+    // 构建小顶堆
+    struct cmp {
+        bool operator ()(const pair<int, ListNode*> a, const pair<int, ListNode*> b) {
+            return a.first > b.first;
+        }
+    };
+
+    ListNode* mergeKLists(vector<ListNode*>& lists) {
+        ListNode* phead = new ListNode();
+        ListNode* p = phead;
+        priority_queue<pair<int, ListNode*>, vector<pair<int, ListNode*>>, cmp> q;
+        for (auto node : lists) {
+            if (node) // 判断是否为空
+                q.push({node -> val, node});
+        }
+        while (!q.empty()) {
+            p -> next = q.top().second;
+            q.pop(); // 删除最小堆顶
+            p = p -> next;
+            // 当前链表还有后续节点
+            if (p -> next) {
+                q.push({p -> next -> val, p -> next});
+            }
+        }
+        return phead -> next;
+    }
+};
+```
+
+- 其他思路： 借鉴归并排序的思路，将链表两两合并，分而治之
+    - 直接套用mergeSort的框架，在合并的时候换成合并两个有序链表的逻辑函数
+    - 时间复杂度： O(kn * logK) 空间复杂度O(logK)
+    - K： 链表数量  n即链表的长度
+
+```
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode* mergeTwoLists(ListNode* a, ListNode* b) {
+        if (a == nullptr) {
+            return b;
+        }
+        if (b == nullptr) {
+            return a;
+        }
+        if (a -> val < b -> val) {
+            a -> next = mergeTwoLists( a -> next, b);
+            return a;
+        }
+        else {
+            b -> next = mergeTwoLists( b -> next, a);
+            return b;
+        }
+    }
+
+    ListNode* merge(vector<ListNode*> lists, int left, int right) {
+        if (left > right) {
+            return nullptr;
+        }
+        if (left == right) 
+            return lists[left];
+        int mid = left + (right - left) / 2;
+        ListNode* a = merge(lists, left, mid);
+        ListNode* b = merge(lists, mid + 1, right);
+        return mergeTwoLists(a, b);
+    }
+
+    ListNode* mergeKLists(vector<ListNode*>& lists) {
+        return merge(lists, 0, lists.size() - 1);
+    }
+};
+```
+
 
 ### 小结
 - 掌握链表的构成方式(单向/双向)
