--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -62,7 +62,7 @@ public:
 
 
 ### 121. 买卖股票的最佳时机 *
-
+- **买卖一次 求最大收益**
 - 计算最大差值，如下所示一次遍历，记录当前最小值并计算差值。
 - 时间复杂度O(n) 空间复杂度O(1)
 
@@ -106,6 +106,8 @@ public:
 ```
 - **总结**
   - 股票买卖的buy和sell，每次遍历时考虑当前状态下buy和sell的最优情况，
+  - buy表示购入股票的情况下的最大收益
+  - sell表示股票卖出的情况下的最大收益
   - buy = max(buy, -p) 买入时讨论：不买入/买入
   - sell = max(sell, buy + p)  卖出时观察： 当前节点卖出的最佳
 ### 122. 买卖股票的最佳时间 2 *
@@ -252,6 +254,8 @@ public:
 
 
 ### 53. 最大子序和 *
+> 给定一个整数数组 nums ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
+> 
 - 动态规划求解 **学习掌握这种节省空间的变量管理写法**
     - f(i)=max{f(i-1)+ai,ai} 状态转移公式 f(i)即表示以第i个数字结尾的子序列的最大值
     - 时间复杂度为： O(n) 空间复杂度O(1)
@@ -391,6 +395,33 @@ public:
 };
 ```
 
+### 213. 打家劫舍 II 
+> 各个房屋形成环，首尾相接
+
+- 在上面的做法基础上，将问题转换成两个单向数组，[0, n-1] [1, n]即尾不偷和头不偷的两个情况，取两种情况的最大值
+```
+class Solution {
+public:
+    int rob(vector<int>& nums) {
+        if (nums.empty())
+            return 0;
+        if (nums.size() < 2) {
+            return nums.back();
+        }
+        return max(robS(nums, 0, nums.size() - 1), robS(nums, 1, nums.size()));
+    }
+    int robS(vector<int>& nums, int start, int end) {
+        int pre = 0;
+        int cur = 0;
+        for (int i = start; i < end; i++) {
+            int tmp = cur;
+            cur = max(cur, pre + nums[i]);
+            pre = tmp;
+        }
+        return cur;
+    }
+};
+```
 ### 55. 跳跃游戏 [Medium]
 - 判断是否可达
 - 可以通过贪心的思路进行处理
@@ -414,8 +445,8 @@ public:
     }
 };
 ```
-### 45. 跳跃游戏 II 
-> 数组中的每个元素代表你在该位置可以跳跃的最大长度。你的目标是使用最少的跳跃次数到达数组的最后一个位置
+### 45. 跳跃游戏 II  [贪心]
+> 数组中的每个元素代表你在该位置可以跳跃的最大长度。你的目标是**使用最少的跳跃次数到达数组的最后一个位置**
 
 - 基于dp的思路，时间复杂度 O(N^2) 空间复杂度O(N)
 
@@ -437,8 +468,10 @@ public:
 ```
 
 - 本题本质上还是典型的**贪心算法**，可以通过贪心的思路来提高效率
-    - 记录当前位置的最大可达边界，当当前位置越过之前最大边界时即需要跳跃
+    - 记录当前位置的最大可达边界，当**当前位置越过之前最大边界时即需要跳跃**
     - step++
+    - end记录前一个最大边界，初始化为0；
+    -  maxposition维护当前的最大边界
   - 时间复杂度 O(N) 空间复杂度O(1)
 
 ```
