--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -19,6 +19,7 @@
 - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
 - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
 - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
+- [补充. 01串问题](#补充-01串问题)
 
 <!-- /code_chunk_output -->
 
@@ -799,3 +800,43 @@ public:
     }
 };
 ```
+
+### 补充. 01串问题
+>  已知一个长度为N的字符串，只由0和1组成， 求一个最长的子串，要求该子串出0和1出现的次数相等。要求算法时间复杂度尽可能的低。
+
+
+- 线性时间复杂度做法：
+  - 记录截止到当前位置，出现的0和1的次数差，如果有两个不同位置的次数差相等则说明两个位置之间的为满足要求的子串
+  - **使用哈希表/数组存储出现的次数差与对应的位置**
+  - 使用两个遍历维护当前遍历位置为止出现的 0 / 1次数
+
+
+```
+int find(string& s) {
+    int N = s.size();
+    unordered_map<int, int> delta; // 记录01差值对应的位置索引
+    int count0 = 0;
+    int count1 = 0; // 记录当前出现的1次数
+    int ans = 0;
+    for (int i = 0; i < N; i++) {
+        if (s[i] == '0') {
+            count0++;
+        }
+        else {
+            count1++;
+        }
+        int _d = count0 - count1;
+        if (delta.count(_d)) {
+            ans = max(ans, i - delta[_d]);
+        }
+        else {
+            delta[_d] = i;
+        }
+    }
+    return ans;
+}
+```
+
+https://blog.csdn.net/weixin_41563161/article/details/105635697
+
+https://blog.csdn.net/c_circle/article/details/78589130
