--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -179,7 +179,8 @@ public:
 ```
 
 
-### 240. 搜索二维矩阵 [Medium]
+### 240. 搜索二维矩阵 II [Medium]
+> 每行的元素从左到右升序排列。 每列的元素从上到下升序排列。
 - 二分查找法：
   - 在对角线开始向下和向右的搜索
 
@@ -258,6 +259,7 @@ public:
 ```
 
 ###  74. 搜索二维矩阵 I [Medium]
+> 每行中的整数从左到右按升序排列。每行的第一个整数大于前一行的最后一个整数
 - 二分查找的利用
   - 先搜第一列，找出小于目标值的第一行，然后再在行内进行二分查找
   - 时间复杂度： `O(logm + logn)`
@@ -345,7 +347,46 @@ public:
     }
 };
 ```
-
+### 59. 螺旋矩阵 II
+- n^2个数字构成正方形，顺时针遍历
+- 循环终止条件 **num < n*n**
+```
+class Solution {
+public:
+    vector<vector<int>> generateMatrix(int n) {
+        vector<vector<int>> target(n, vector<int>(n));
+        int row_l = 0;
+        int row_r = n - 1;
+        int col_l = 0;
+        int col_r = n - 1;
+        int num = 0;
+        n = n * n;
+        while(num < n) {
+            for (int i = col_l; i <= col_r && num < n; i++) {
+                target[row_l][i] = num + 1;
+                num++;
+            }
+            row_l ++;
+            for (int i = row_l; i <= row_r && num < n; i++) {
+                target[i][col_r] = num + 1;
+                num++;
+            }
+            col_r--;
+            for (int i = col_r; i >= col_l && num < n; i--) {
+                target[row_r][i] = num + 1;
+                num++;
+            }
+            row_r--;
+            for (int i = row_r; i >= row_l && num < n; i--) {
+                target[i][col_l] = num + 1;
+                num++;
+            }
+            col_l++;
+        }
+        return target;
+    }
+};
+```
 ### 718. 最长重复子数组
 > 给两个整数数组 A 和 B ，返回两个数组中公共的、长度最长的子数组的长度。
 
