--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -591,7 +591,7 @@ public:
 };
 ```
 
-### 最长上升子序列
+### 300. 最长上升子序列
 - 基础DP思路
   - 状态转移公式 `dp[i]=max(dp[j])+1,其中0≤j<i且num[j]<num[i]`
   - 初始化：`dp[0]=0` 
